# tauri

./: .gitignore  index.html  package-lock.json  package.json  readme.md
.github/workflows/: actions.yml  artifacts.old  artifacts.yml  build.yml  release-version.yml  release-vertion.yml  relesase.old  relesase.yml  test.yml
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: build.rs  main.rs
src-tauri/src/function/: data-struck.rs  mod.rs  social_link.rs
src-tauri/src/menu-toolbar/: menu-android.rs  menu-linux.rs  menu-windows.rs  menus.rs  mod.rs
src-tauri/src/menu_toolbar/: menu.rs  menu_android.rs  menu_ios.rs  menu_linux.rs  menu_mac.rs  menu_windows.rs  mod.rs  windows.rs
