[package]
name = "tauri-template"
version = "0.1.2"
description = "A Tauri App"
edition = "2021"
license = "Apache-2.0 OR MIT"
default-run = "tauri-template"
build = "src/build.rs"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-rc.9", features = [] }

[dependencies]
serde_json = "1.0.81"
serde = { version="1.0.137", features = ["derive"] }
tauri = { version = "1.0.0-rc.11", features = ["shell-open"] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

# default to small, optimized release binaries
[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size # "s" and "z" can sometimes be smaller than the other, so test it with your application!
incremental = false

